--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
-  "name": "vue-cli",
-  "description": "A Vue.js project",
-  "author": "Maximilian Schwarzmüller <mblacky0@gmail.com>",
+  "name": "form-builder",
+  "author": "Ashutosh agarwal",
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --inline --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "babel-runtime": "^6.26.0",
     "bootstrap": "^3.3.7",
     "draggable-vue-directive": "^2.0.0",
-    "vue": "^2.0.1"
+    "file-saver": "^1.3.8",
+    "vue": "^2.0.1",
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.9.7"
   },
   "devDependencies": {
+    "@types/file-saver": "^1.3.0",
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
     "babel-preset-es2015": "^6.0.0",
@@ -20,7 +24,6 @@
     "css-loader": "^0.25.0",
     "file-loader": "^0.9.0",
     "vue-loader": "^9.7.0",
-    "webpack": "2.1.0-beta.25",
-    "webpack-dev-server": "2.1.0-beta.0"
+    "webpack-cli": "^2.0.10"
   }
 }
