--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "babel-runtime": "^6.26.0",
-    "bootstrap": "^3.3.7",
+    "bootstrap-vue": "^2.0.0-rc.11",
     "draggable-vue-directive": "^2.0.0",
     "file-saver": "^1.3.8",
     "vue": "^2.0.1",
